# cim2linkml

./: .gitignore  README.md  out.yml  pyproject.toml
sparxea2linkml/: .__init__.py.swp  __init__.py  ea_model.py  main.py
