[tool.poetry]
name = "sparxea2linkml"
version = "0.1.0"
description = ""
authors = ["Bart Kleijngeld <bartkl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
linkml = "^1.7.5"
linkml-runtime = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
