[tool.poetry]
name = "sparxea2linkml"
version = "0.1.0"
description = ""
authors = ["Bart Kleijngeld <bartkl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
linkml-runtime = "^1.7.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pyright = "^1.1.355"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
